pd 100963 when camera is in front,
then, plug out usb camera, exit to HOME screen

Change-Id: Ib6732c98ae9a285c54ea54c2e1aad58151c1a770

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -19,6 +19,8 @@
     <uses-permission android:name="droidlogic.permission.SYSTEM_CONTROL" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application android:process="system"
                  android:persistent="true"
