pd# 104645: if wifi is on,
when plug in ethernet need close wifi

when plug out ethernet need open wifi

Change-Id: I7cc605d063e13886a3c435ed083a5f6db261e8cc

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -44,6 +44,11 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver android:name="com.droidlogic.EthernetWifiSwitch">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
