add cec control
Change-Id: I0f292de49c957d904df8f113eda96b93dc6a44e4

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -38,6 +38,12 @@
             </intent-filter>
         </receiver>
 
+        <service android:name="com.droidlogic.CecService" >
+            <intent-filter>
+                <action android:name="CEC_LANGUAGE_AUTO_SWITCH" />
+            </intent-filter>
+        </service>
+
         <service android:name="com.droidlogic.HdmiService" />
         <receiver android:name="com.droidlogic.BootComplete">
             <intent-filter>
