PD#116404: add HdmiCecExtend for auto-language sync
Change-Id: I9d9639560f091368d0e136684029cf4eaad6d82a

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.HDMI_CEC" />
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application android:process="system"
