PD #118175: add optimization for android M
Change-Id: Ia3451e6de2705ddd60cf0c22d44b7ef41fddb43a

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -45,6 +45,8 @@
             </intent-filter>
         </service>
 
+        <service android:name="com.droidlogic.Optimization" />
+
         <receiver android:name="com.droidlogic.BootComplete">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
