PD#123638: netflix: add dial and button
Change-Id: I6687b8e86c01b8d3ed4484ce44cd41cb20a35ab4

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -47,6 +47,8 @@
 
         <service android:name="com.droidlogic.Optimization" />
 
+        <service android:name="com.droidlogic.NetflixService" />
+
         <receiver android:name="com.droidlogic.BootComplete">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
